--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,16 @@ html, body {
     /*background-size:100%;*/
     background-repeat: repeat;
     background-attachment: fixed;
-    height:100%;
-    width:100%;
 }
 
-header {
-    background: pink;
-    height: 5em;
+body {
+    min-height: 75rem;
+    padding-top: 8rem;
 }
 
-.logo {
-    max-height: 3em;
+.navbar-brand {
+    /* width: 100%; */
+    font-size: 2.5em;
+    font-family: impact;
+    color: white !important;
 }
