--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 /* Global */
 html, body {
-    background-image: url('nyan.gif');
-    /*background-size:100%;*/
-    background-repeat: repeat;
-    background-attachment: fixed;
+    /*
+    * background-image: url('nyan.gif');
+    * background-size:100%;
+    * background-repeat: repeat;
+    *background-attachment: fixed;
+    */
 }
 
 body {
